feat: started the collektive section of the background chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -265,3 +265,46 @@
   biburl       = {https://dblp.org/rec/conf/saso/AudritoDVC16.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{DBLP:journals/jos/PianiniMV13,
+  author       = {Danilo Pianini and
+                  Sara Montagna and
+                  Mirko Viroli},
+  title        = {Chemical-oriented simulation of computational systems with {ALCHEMIST}},
+  journal      = {J. Simulation},
+  volume       = {7},
+  number       = {3},
+  pages        = {202--215},
+  year         = {2013},
+  url          = {https://doi.org/10.1057/jos.2012.27},
+  doi          = {10.1057/JOS.2012.27},
+  timestamp    = {Fri, 30 Nov 2018 13:25:08 +0100},
+  biburl       = {https://dblp.org/rec/journals/jos/PianiniMV13.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/forte/DamianiVPB15,
+  author       = {Ferruccio Damiani and
+                  Mirko Viroli and
+                  Danilo Pianini and
+                  Jacob Beal},
+  editor       = {Susanne Graf and
+                  Mahesh Viswanathan},
+  title        = {Code Mobility Meets Self-organisation: {A} Higher-Order Calculus of
+                  Computational Fields},
+  booktitle    = {Formal Techniques for Distributed Objects, Components, and Systems
+                  - 35th {IFIP} {WG} 6.1 International Conference, {FORTE} 2015, Held
+                  as Part of the 10th International Federated Conference on Distributed
+                  Computing Techniques, DisCoTec 2015, Grenoble, France, June 2-4, 2015,
+                  Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {9039},
+  pages        = {113--128},
+  publisher    = {Springer},
+  year         = {2015},
+  url          = {https://doi.org/10.1007/978-3-319-19195-9\_8},
+  doi          = {10.1007/978-3-319-19195-9\_8},
+  timestamp    = {Tue, 20 Aug 2019 15:26:58 +0200},
+  biburl       = {https://dblp.org/rec/conf/forte/DamianiVPB15.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
