feat: added kotlin compiler image and related citation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -308,3 +308,11 @@
   biburl       = {https://dblp.org/rec/conf/forte/DamianiVPB15.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@book{moskala2023,
+  title     = "Advanced Kotlin (Kotlin for Developers)",
+  author    = "Marcin Moskala",
+  year      = 2023,
+  publisher = "978-83-966847-4-5",
+}
+
