--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -416,6 +416,12 @@ main structure and how they interact with the Kotlin compiler.
 
 \section{Kotlin Compiler Plugins}
 
+\begin{figure}
+    \centering
+    \includegraphics[width=.8\linewidth]{figures/kotlin-compiler-architecture.pdf}
+    \caption{Kotlin compiler architecture. Adapted from the one at \cite{moskala2023}}
+    \label{fig:random-image}
+\end{figure}
 
 
 \section{Motivations}
